# DeKUF

./: .editorconfig  .gitlab-ci.yml  README.md  demo  docker-compose.yaml
client/: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  format  lint
client/cmake/: FindGpgme.cmake
client/example_supplier/: README.md  pyproject.toml  submit_data_point.py
client/src/: CMakeLists.txt  client.cpp  client.hpp  commissioner.hpp  main.cpp  sqlite_storage.cpp  sqlite_storage.hpp  storage.hpp  survey.cpp  survey.hpp  survey_response.cpp  survey_response.hpp
client/src/core/: CMakeLists.txt  encrypted_survey_response.cpp  encrypted_survey_response.hpp  interval.cpp  interval.hpp  result.hpp  sqlite_storage.cpp  sqlite_storage.hpp  storage.hpp  survey.cpp  survey.hpp  survey_record.hpp  survey_response.cpp  survey_response.hpp
client/src/daemon/: CMakeLists.txt  client.cpp  client.hpp  daemon.cpp  daemon.hpp  dbus_service.cpp  dbus_service.hpp  encryption.hpp  gpgme_encryption.cpp  gpgme_encryption.hpp  homomorphic_encryptor.hpp  identity_encryption.cpp  identity_encryption.hpp  main.cpp  network.hpp  paillier_encryptor.cpp  paillier_encryptor.hpp  server_network.cpp  server_network.hpp  sqlite_storage.cpp  storage.hpp  survey.cpp  survey.hpp
client/src/ui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp  main_window.ui
client/tests/: CMakeLists.txt  main.cpp  sqlite_storage_test.cpp  sqlite_storage_test.hpp  storage_test.cpp  storage_test.hpp  survey_response_test.cpp  survey_response_test.hpp  survey_test.cpp  survey_test.hpp
client/tests/core/: CMakeLists.txt  interval_test.cpp  interval_test.hpp  result_test.cpp  result_test.hpp  sqlite_storage_test.cpp  sqlite_storage_test.hpp  survey_response_test.cpp  survey_response_test.hpp  survey_test.cpp  survey_test.hpp
client/tests/daemon/: CMakeLists.txt  client_test.cpp  client_test.hpp  daemon_test.cpp  daemon_test.hpp  encrypted_survey_response_test.cpp  encrypted_survey_response_test.hpp  gpgme_encryption_test.cpp  gpgme_encryption_test.hpp  identity_encryption_test.cpp  identity_encryption_test.hpp  paillier_encryptor_test.cpp  paillier_encryptor_test.hpp  sqlite_storage_test.cpp  survey_response_test.cpp  survey_test.cpp
client/tests/daemon/stubs/: storage_stub.hpp
client/tests/stubs/: storageStub.hpp  storage_stub.hpp
client/tests/stubs/core/: storage_stub.hpp
client/tests/stubs/daemon/: homomorphic_encryptor_stub.hpp  network_stub.hpp
server/: .flake8  .gitignore  Dockerfile  README.md  lint.py  manage.py  mypy.ini  pyproject.toml  requirements.txt
server/core/: admin.py  json_serializers.py  models.py  tests.py  urls.py  views.py
server/core/fixtures/: data_points.json
server/core/migrations/: 0001_initial.py  0002_alter_query_number_participants.py  0002_commissioner_query_queryresponse_survey_and_more.py  0002_query_aggregated_results_alter_queryresponse_data.py  0003_survey_name.py  0003_surveysignup.py  0004_aggregationgroup_surveysignup_group.py  0004_query_cohorts.py  0005_clienttodelegatemessage.py  0006_alter_surveysignup_group.py  0007_alter_aggregationgroup_delegate_and_more.py  0008_survey_group_count_survey_group_size.py  0009_surveysignup_public_key.py  0010_rename_delegate_clienttodelegatemessage_delegate_id_and_more.py  0011_aggregationgroup_aggregation_private_key_p_and_more.py  0012_datapoint_remove_query_data_key_query_data_point.py  0013_load_fixture_data_points_data.py  0014_remove_query_number_participants_and_more.py
server/core/models/: aggregation_group.py  check_intervals.py  client_to_delegate_message.py  commissioner.py  data_point.py  grouping_logic.py  response.py  survey.py  survey_signup.py
server/core/tests/: serialization_tests.py  test_check_intervals.py  test_federated_aggregation_endpoints.py  test_grouping_logic.py  test_messaging_to_delegate.py  test_query_response_aggregation.py  test_serialization.py
server/core/views/: survey_views.py
server/dekuf-server/: asgi.py  settings.py  urls.py  wsgi.py
server/dekufserver/: asgi.py  settings.py  urls.py  wsgi.py
server/privactserver/: asgi.py  settings.py  urls.py  wsgi.py
