[tool.poetry]
name = "Decentralising KUserFeedback"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
Django = "~4.2.11"
djangorestframework = "~3.14.0"

[tool.poetry.dev-dependencies]
black = "24.2.0"
isort = "5.13.2"
mypy-extensions = "1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
