[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "~4.2.11"
djangorestframework = "~3.14.0"

[tool.poetry.group.dev.dependencies]
black = "24.2.0"
django-stubs = "^4.2.7"
isort = "5.13.2"
mypy-extensions = "1.0.0"
mypy = "^1.9.0"
djangorestframework-stubs = "^3.14.5"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 80
extend-exclude = '''
/(
  core/migrations
)/
'''
