function(add_executable_test source)
    get_filename_component(name ${source} NAME_WE)
    add_executable(${name} ${source})
    target_link_libraries(${name} PRIVATE privact-client-daemon-lib Qt::Test)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

file(GLOB PRIVACT_CLIENT_DAEMON_TESTS CONFIGURE_DEPENDS "*_test.cpp")
foreach(TEST ${PRIVACT_CLIENT_DAEMON_TESTS})
    add_executable_test(${TEST})
endforeach()
